# Tesseract-exporter

./: CMakeLists.txt  Config.h.in  HOCRDocument.cc  HOCRDocument.hh  Interprocess.hh  Painter.cc  Painter.hh  PaperSize.cc  PaperSize.hh  README.md  Render.cc  Render.hh  Tessocr.cc  Tessocr.hh  astyle.options  formatSourceFiles.sh  front.cpp  main.cc
package/: deps.sh
