CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
SET(ENV{LC_ALL} "C")

# Project propertyies
PROJECT(ImageReader)

# Definitions
SET(CMAKE_CXX_STANDARD 11)
SET(CXX_STANDARD_REQUIRED ON)

SET(MEMORY "ZZ_OCR_SPACE")
SET(IN_PATH "InPath")
SET(OUT_PATH "OutPath")
SET(PAGE_RANGE "PageRange")
SET(TESS_DATA "TessData")
SET(PROGRESS_INFO "ProgressInfo")
SET(TESS_LANG "eng")
CONFIGURE_FILE(
  "Config.h.in"
  "Config.h"
)


# Dependencies
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(TESSERACT tesseract)
SET(PODOFO_LDFLAGS -lpodofo)

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR} ${TESSERACT_INCLUDE_DIRS}) 
SET(CMAKE_AUTOMOC ON)
FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Xml REQUIRED)
FIND_PACKAGE(Qt5PrintSupport REQUIRED)
PKG_CHECK_MODULES(POPPLER REQUIRED poppler-qt5)
INCLUDE_DIRECTORIES(${POPPLER_INCLUDE_DIRS})
SET(ImageReader_LIBS ${POPPLER_LDFLAGS} ${PODOFO_LDFLAGS})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR} Config.h)

# Files
ADD_DEFINITIONS(-DDEBUG -DWINDOWS)

FILE(GLOB ImageReader_SRCS
 *.cc	
)
LIST(SORT ImageReader_SRCS)
FILE(GLOB ImageReader_HDRS
  *.hh
)
LIST(SORT ImageReader_HDRS)

ADD_EXECUTABLE(EndProcess
  ${ImageReader_HDRS}
  ${ImageReader_SRCS}
)

ADD_EXECUTABLE(FrontUI front.cpp Interprocess)

TARGET_LINK_LIBRARIES(EndProcess
  ${TESSERACT_LDFLAGS}
  ${ImageReader_LIBS}
)

IF(NOT MINGW)
        TARGET_LINK_LIBRARIES(EndProcess rt)
        TARGET_LINK_LIBRARIES(FrontUI rt)
ELSE(NOT MINGW)
        TARGET_LINK_LIBRARIES(EndProcess intl)
        TARGET_LINK_LIBRARIES(FrontUI intl)
ENDIF(NOT MINGW)

TARGET_LINK_LIBRARIES(EndProcess Qt5::Widgets Qt5::Xml Qt5::PrintSupport pthread)
TARGET_LINK_LIBRARIES(FrontUI pthread)
